# 30122-project-the_watchdogs

./: README.md  clean.py  content_analysis_notebook.ipynb  crawler.py  pyproject.toml  utils.py
cnn/: scrape_cnn.py
data/: cnn_results.json  fox_articles.json
data_viz/: data_viz.ipynb  data_viz.py
fox/: scrape_fox.py
nyt/: scrape_nyt_jupyter.ipynb
test_data/: cnn_corpus.txt  content_analysis_notebook.ipynb  fox_articles.json
the_watchdogs/: clean.py  preprocess.py  scrape_sources.py  utils.py
the_watchdogs/cnn/: cnn_utils.py  scrape_cnn.py
the_watchdogs/data/: CNN_corpus.txt  FOX_clean_df.csv  FOX_corpus.txt  fox_articles.json
the_watchdogs/data_viz/: __main__.py  app.py  data_viz.ipynb  data_viz.py  data_viz_final.ipynb  data_viz_prep.py  plot.py
the_watchdogs/data_viz/.ipynb_checkpoints/: data_viz_final-checkpoint.ipynb
the_watchdogs/fox/: fox_utils.py  scrape_fox.py
the_watchdogs/nyt/: scrape_nyt.py
the_watchdogs/test_data/: cnn_articles.json
