[tool.poetry]
name = "the-watchdogs"
version = "0.1.0"
description = ""
authors = ["lkilpat <lkilpatrick@uchicago.edu>"]
readme = "README.md"
packages = [{include = "the_watchdogs"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
nltk = "^3.8.1"
pandas = "^1.5.3"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
